recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:8: error: not enough arguments for method recule: (x$1: Double)Unit.
Unspecified value parameter x$1.
   recule()
         ^